--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
 			<p class="copyr">&copy;<span>kaspar</span> all rights reserved</p>
 
 		</div>
+		mmmm
 	</div>
 	<!-- end-footer -->
 </body>
